--- a/templates/customer_dashboard.html
+++ b/templates/customer_dashboard.html
@@ -28,7 +28,7 @@
                       </li>
                     </ul>
                     <span class="navbar-text">
-                      Welcome Professional
+                      Welcome Customer
                     </span>
                   </div>
                 </div>
@@ -107,7 +107,7 @@
                       +91 9876543210
                     </div>
                     <div class="col">
-                      closee it?
+                      close it?
                     </div>
                   </div>
                   <div class="row align-items-start">
