--- a/templates/customer_dashboard.html
+++ b/templates/customer_dashboard.html
@@ -30,6 +30,7 @@
                     <span class="navbar-text">
                       Welcome Customer
                     </span>
+                    <div class="wlc_msg">{{msg}} </div>
                   </div>
                 </div>
               </nav>
