--- a/templates/professional_dashboard.html
+++ b/templates/professional_dashboard.html
@@ -29,7 +29,9 @@
                     </ul>
                     <span class="navbar-text">
                       Welcome Professional
-                    </span>
+                    </span> <br>
+                            <br>
+                    <div class="wlc_msg">{{msg}} </div>
                   </div>
                 </div>
               </nav>
