--- a/templates/professional_signup.html
+++ b/templates/professional_signup.html
@@ -16,7 +16,7 @@
                 <div class="signup_form">
                     <div class="mb-3">
                         <label for="user_name" class="form-label">Email </label>
-                        <input type="email" class="form-control"  name="user_name" id="user_name" placeholder="Enter Your Email">
+                        <input type="email" class="form-control"  name="user_name" id="user_name" placeholder="Enter Your Email">   <div class="centre">{{msg}} </div>
                       </div>
                       
                       <div class="mb-3">
