--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -1,39 +1,7 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="/static/style/main.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <title>
-                Admin dashboard
-        </title>
-    </head>
-    <body>
-        <div class="my_container">
-        <div class="centre"> <h1>Household Sevice </h1></div>
-            <div class="my_panel">
-              <nav class="navbar navbar-expand-lg " style="background-color: #e3f2fd;">
-                <div class="container-fluid">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Search</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Summary</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Logout</a>
-                      </li>
-                    </ul>
-                    <span class="navbar-text">
-                      Welcome Admin
-                    </span>
-                  </div>
-                </div>
-              </nav>
-            </div>
+{%extends "admin_layout.html"%}
+{%block content%}    <!--Inherited all nav featues-->
+
+
 
           <!--start of Service-->
          <div class="my_container">
@@ -55,81 +23,45 @@
                     <div class="col">
                       Action
                     </div>
-                  </div>  </b>
-                  <div class="row align-items-start">
                     <div class="col">
-                     <a href="#">1</a>
-                    </div>
-                    <div class="col">
-                      cleaning
-                    </div>
-                    <div class="col">
-                      123
-                    </div>
-                    <div class="col">
-                      Edit/Delte
+                      Description
                     </div>
                   </div>
+
+                  <div>
+                  {%if services%}
+                  <div>
+                  {%for service in services%}
                   <div class="row align-items-start">
                     <div class="col">
-                      <a href="#">2</a>
+                     <a href="#"> {{service.id}}</a>
                     </div>
                     <div class="col">
-                      Haircut
+                      {{service.name}}
                     </div>
                     <div class="col">
-                      123
+                      {{service.price}}
                     </div>
                     <div class="col">
-                      Edit/Delte
+                      {{service.action}}
+                    </div>
+                    <div class="col">
+                      {{service.description}}
                     </div>
                   </div>
-                  <div class="row align-items-start">
-                    <div class="col">
-                      <a href="#">3</a>
-                    </div>
-                    <div class="col">
-                      AC service and repair
-                    </div>
-                    <div class="col">
-                      123
-                    </div>
-                    <div class="col">
-                      Edit/Delte
-                    </div>
-                  </div>
-                  <div class="row align-items-start">
-                    <div class="col">
-                      <a href="#">4</a>
-                    </div>
-                    <div class="col">
-                      Tap repair
-                    </div>
-                    <div class="col">
-                      123
-                    </div>
-                    <div class="col">
-                      Edit/Delte
-                    </div>
-                  </div>
-                  <div class="row align-items-start">
-                    <div class="col">
-                      <a href="#">5</a>
-                    </div>
-                    <div class="col">
-                      Electrician
-                    </div>
-                    <div class="col">
-                      123
-                    </div>
-                    <div class="col">
-                      Edit/Delte
-                    </div>
-                  </div>
+                
+                  {%endfor%}
                 </div>
+                  {%else%}
+                  <h3 class="centre"> No Service available! </h3>
+                  {%endif%}
+                </div>
+
+  
+                 
                
               </div>
-              <div class="centre"> <button type="button" class="btn btn-primary" class="centre"> +New Service</button> </div>
+              <div class="centre"> <a href="/add_venue/{{name}}" type="button" class="btn btn-primary" class="centre"> +New Service</a> </div>
         </div>
         <!--end of Service-->
 <br>
@@ -158,98 +90,50 @@
                     Action
                   </div>
                 </div>  </b>
+
+
+                {%if professionals%}
+                {%for professional in professionals%}
                 <div class="row align-items-start">
                   <div class="col">
-                   <a href="#">1</a>
+                   <a href="#"> {{professional.id}} </a>
                   </div>
                   <div class="col">
-                    professional--1
+                    {{professional.full_name}}
                   </div>
                   <div class="col">
-                    name of service
+                    {{professional.service_type}}
                   </div>
                   <div class="col">
-                    20
+                    {{professional.experience}}
                   </div>
                   <div class="col">
                     Approve/Reject/Delete
                   </div>
                 </div>
-                <div class="row align-items-start">
-                  <div class="col">
-                   <a href="#">2</a>
-                  </div>
-                  <div class="col">
-                    professional--2
-                  </div>
-                  <div class="col">
-                    name of service
-                  </div>
-                  <div class="col">
-                    22
-                  </div>
-                  <div class="col">
-                    Approve/Reject/Delete
-                  </div>
-                </div>
-                <div class="row align-items-start">
-                  <div class="col">
-                   <a href="#">3</a>
-                  </div>
-                  <div class="col">
-                    professional--3
-                  </div>
-                  <div class="col">
-                    name of service
-                  </div>
-                  <div class="col">
-                    18
-                  </div>
-                  <div class="col">
-                    Approve/Reject/Delete
-                  </div>
-                </div>
-                <div class="row align-items-start">
-                  <div class="col">
-                   <a href="#">4</a>
-                  </div>
-                  <div class="col">
-                    professional--4
-                  </div>
-                  <div class="col">
-                    name of service
-                  </div>
-                  <div class="col">
-                    24
-                  </div>
-                  <div class="col">
-                    Approve/Reject/Delete
-                  </div>
-                </div>
-                <div class="row align-items-start">
-                  <div class="col">
-                   <a href="#">5</a>
-                  </div>
-                  <div class="col">
-                    professional--5
-                  </div>
-                  <div class="col">
-                    name of service
-                  </div>
-                  <div class="col">
-                    30
-                  </div>
-                  <div class="col">
-                    Approve/Reject/Delete
-                  </div>
-                </div>
+                  {%endfor%}
+                <div>
+                {%else%}
+                <h3 class="centre"> No Service available! </h3>
+                {%endif%}
               </div>
-             
-            </div>
-        </div>
+                
+                
+
+
+              
       <!--end of professional-->
+
+
+
+
+
       <br>
       <br>
+
+
+
+      
       <!--start of Service request-->
       <div class="my_container">
         <div class="centre"> <h1>Services Request </h1></div>
@@ -344,8 +228,10 @@
               </div>
             </div>
            
+           </div> 
           </div>
         </div>
     <!--end of Service request-->
-    </body>
-</html>
+
+
+    {%endblock%}
