--- a/templates/customer_dashboard.html
+++ b/templates/customer_dashboard.html
@@ -1,40 +1,12 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="/static/style/main.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <title>
-                Customer dashboard
-        </title>
-    </head>
-    <body>
-        <div class="my_container">
-        <div class="centre"> <h1>Household Sevice </h1></div>
-            <div class="my_panel">
-              <nav class="navbar navbar-expand-lg " style="background-color: #e3f2fd;">
-                <div class="container-fluid">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Search</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Summary</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Logout</a>
-                      </li>
-                    </ul>
-                    <span class="navbar-text">
-                      Welcome Customer
-                    </span>
-                    <div class="wlc_msg">{{msg}} </div>
-                  </div>
-                </div>
-              </nav>
-            </div>
+{%extends "Customer_layout.html"%}
+{%block content%}      <!--Inherited all nav featues-->
+
+
+
+
+
+
+
 
           <!--start of Servicehhistory-->
          <div class="my_container">
@@ -152,6 +124,7 @@
             </div>
         <!--end of Today Service History-->
 
-     
-    </body>
-</html>
+
+
+
+{%endblock%}        
