--- a/templates/customer_layout.html
+++ b/templates/customer_layout.html
@@ -1,8 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="/static/style/main.css">
+       <link rel="stylesheet" href="/static/style/main.css">  
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+           <style>
+        .card {
+            height: 150px; /* Reduced height */
+            padding: 10px; /* Reduced padding */
+        }
+        .card-title {
+            font-size: 1rem; /* Smaller title font */
+        }
+        .card-text {
+            font-size: 0.9rem; /* Smaller description font */
+        }
+        .btn {
+            font-size: 0.85rem; /* Smaller button */
+            padding: 5px 10px; /* Compact button */
+        }
+    </style>
         <title>
                 Customer dashboard
         </title>
@@ -15,7 +32,7 @@
                 <div class="container-fluid">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/customer/{{name}}">Home</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Search</a>
@@ -24,7 +41,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Summary</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Logout</a>
+                        <a class="nav-link" href="/login">Logout</a>
                       </li>
                     </ul>
                     <span class="navbar-text">
@@ -42,7 +59,7 @@
             {%endblock%}
 
             {%block content_add_service%}
-            <!--This part is getting from child html (add new Service)-->
+            <!--This part is getting from child html ()-->
 
             {%endblock%}
 
