--- a/templates/professional_layout.html
+++ b/templates/professional_layout.html
@@ -15,7 +15,7 @@
                 <div class="container-fluid">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/professional/{{name}}">Home</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Search</a>
@@ -24,7 +24,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Summary</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Logout</a>
+                        <a class="nav-link" href="/login">Logout</a>
                       </li>
                     </ul>
                     <span class="navbar-text">
