"Updated app.py, controllers.py, models.py, and templates to add new features and functionality, including Flask Migrate integration, date created and service date fields, rating and rating count fields, and various UI changes."

--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -43,7 +43,7 @@
                       {{service.price}}
                     </div>
                     <div class="col">
-                      <a class="btn btn-primary" href="/edit_service/{{service.id}}/{{name}}">    Edit <a clas="btn btn-danger" href="/delete_service/{{service.id}}/{{name}}">Delete </a>
+                      <a class="btn btn-primary" href="/edit_service/{{service.id}}/{{name}}">    Edit <a class="btn btn-danger" href="/delete_service/{{service.id}}/{{name}}">Delete </a>
                     </div>
                     <div class="col">
                       {{service.description}}
@@ -151,7 +151,7 @@
                   Assigned Professional
                 </div>
                 <div class="col">
-                  Request Date
+                  Service Date
                 </div>
                 <div class="col">
                   Status
