--- a/templates/customer_layout.html
+++ b/templates/customer_layout.html
@@ -59,7 +59,12 @@
             {%endblock%}
 
             {%block content_add_service%}
-            <!--This part is getting from child html ()-->
+            <!--This part is getting from child html (Add Service) ()--> 
+
+            {%endblock%}
+
+            {%block book_service%}
+            <!--This part is getting from child html (book service) ()-->  
 
             {%endblock%}
 
