--- a/templates/customer_signup.html
+++ b/templates/customer_signup.html
@@ -33,10 +33,14 @@
                         <label for="pin_code" class="form-label">Pin Code </label>
                             <input type="number" class="form-control" name="pin_code" id="pin_code" placeholder="Enter Your Pin Code">
                           </div> 
-
+                          <div class="mb-3"> 
+                            <div class="mb-3"> 
+                              <label for="mob_num" class="form-label">Mobile Number</label>
+                                  <input type="number" class="form-control" name="mob_num" id="mob_num" placeholder="Enter Your Mobile Number">
+                                </div>    
                           <div class="mb-3"> 
                             <label for="descrtion" class="form-label">Descrtion </label>
-                                <input type="text" class="form-control" name="descrtion" id="descrtion" placeholder="Any other information ">
+                                <input type="text" class="form-control" name="description" id="description" placeholder="Any other information ">
                             </div> 
 
                       <div class="mb-3">
