--- a/templates/professional_dashboard.html
+++ b/templates/professional_dashboard.html
@@ -10,7 +10,7 @@
 
           <!--start of Today Service-->
          <div class="my_container">
-            <div class="centre"> <h1>Today Services </h1></div>
+            <div class="centre"> <h1> New  Service Request</h1></div>
               <div class="my_panel">
 
                 
@@ -27,6 +27,9 @@
                     </div>
                     <div class="col">
                       Location
+                    </div>
+                    <div class="col">
+                      Service Date
                     </div>
                     <div class="col">
                       Action
@@ -145,7 +148,7 @@
             Location
           </div>
           <div class="col">
-            Date
+            Service Date
           </div>
           <div class="col">
             Rating
