--- a/templates/professional_dashboard.html
+++ b/templates/professional_dashboard.html
@@ -8,12 +8,11 @@
 
 
 
-          <!--start of Today Service-->
+          <!--start of new Service-->
          <div class="my_container">
             <div class="centre"> <h1> New  Service Request</h1></div>
               <div class="my_panel">
-
-                
+{%if services_request%}                
                 <div class="container text-center">
                   <div class="row align-items-start" style="font-size: 20px;">
                     <div class="col">
@@ -26,7 +25,7 @@
                       Mobile Number
                     </div>
                     <div class="col">
-                      Location
+                      Address
                     </div>
                     <div class="col">
                       Service Date
@@ -35,97 +34,37 @@
                       Action
                     </div>
                   </div>  </b>
+
+{%for request in services_request%}  
+           
                   <div class="row align-items-start">
                     <div class="col">
-                     <a href="#">1</a>
+                     <a href="#">{{request.request_id}}</a>
                     </div>
                     <div class="col">
-                      Customer--1
+                      {{request.customer_name}}
                     </div>
                     <div class="col">
-                      +91 9876543210
+                      {{request.customer_mobile}}
                     </div>
                     <div class="col">
-                      address--1
+                      {{request.customer_address}}
                     </div>
                     <div class="col">
-                      Accept/rejecte
+                      {{request.service_date}}
+                    </div>
+                    <div class="col">
+                      <a href="#" class="centre"> Accept </a>   <a href="#" class="centre">/Rejecte </a>
                     </div>
                   </div>
-                  <div class="row align-items-start">
-                    <div class="col">
-                     <a href="#">2</a>
-                    </div>
-                    <div class="col">
-                      Customer--2
-                    </div>
-                    <div class="col">
-                      +91 9876543210
-                    </div>
-                    <div class="col">
-                      address--2
-                    </div>
-                    <div class="col">
-                      Accept/rejecte
-                    </div>
-                  </div>
-                  <div class="row align-items-start">
-                    <div class="col">
-                     <a href="#">3</a>
-                    </div>
-                    <div class="col">
-                      Customer--3
-                    </div>
-                    <div class="col">
-                      +91 9876543210
-                    </div>
-                    <div class="col">
-                      address--3
-                    </div>
-                    <div class="col">
-                      Accept/rejecte
-                    </div>
-                  </div>
-                  <div class="row align-items-start">
-                    <div class="col">
-                     <a href="#">4</a>
-                    </div>
-                    <div class="col">
-                      Customer--4
-                    </div>
-                    <div class="col">
-                      +91 9876543210
-                    </div>
-                    <div class="col">
-                      address--4
-                    </div>
-                    <div class="col">
-                      Accept/rejecte
-                    </div>
-                  </div>
-                  <div class="row align-items-start">
-                    <div class="col">
-                     <a href="#">5</a>
-                    </div>
-                    <div class="col">
-                      Customer--5
-                    </div>
-                    <div class="col">
-                      +91 9876543210
-                    </div>
-                    <div class="col">
-                      address--5
-                    </div>
-                    <div class="col">
-                      Accept/rejecte
-                    </div>
-                  </div>
-                  
-                </div>
-               
-              </div>
-            </div>
-        <!--end of Today Service-->
+{%endfor%}
+{%else%}
+<div class="centre"> No New Service Request</div>
+{%endif%}                  
+
+
+
+        <!--end of new Service-->
 <br>
 <!--start of Service closed-->
 <div class="my_container">
